feat (middleware validation) : Functional version of middleware and CRUD
